microservices/product-catalog-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-product-catalog
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-product-catalog
      version: v1
  template:
    metadata:
      labels:
        app: mongodb-product-catalog
        version: v1
    spec:
      containers:
      - name: mongodb-product-catalog
        image: mongo:6.0
        ports:
        - containerPort: 27017
