microservices/product-catalog-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog-v2
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
      version: v2
  template:
    metadata:
      labels:
        app: product-catalog
        version: v2
    spec:
      containers:
      - name: product-catalog
        image: rslim087/product-catalog:2.0.0
        ports:
        - containerPort: 3001
