microservices/ecommerce-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-ui
      version: v1
  template:
    metadata:
      labels:
        app: ecommerce-ui
        version: v1
    spec:
      containers:
      - name: ecommerce-ui
        image: rslim087/ecommerce-ui:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui
  namespace: ecommerce
spec:
  type: LoadBalancer
  ports:
  - port: 4000
    name: http
  selector:
    app: ecommerce-ui
