microservices/product-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
      version: v1
  template:
    metadata:
      labels:
        app: product-catalog
        version: v1
    spec:
      containers:
      - name: product-catalog
        image: rslim087/product-catalog:1.0.0
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
      version: v2
  template:
    metadata:
      labels:
        app: product-catalog
        version: v2
    spec:
      containers:
      - name: product-catalog
        image: rslim087/product-catalog:2.0.0
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: ecommerce
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: product-catalog
