microservices/product-catlog-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-product-catalog
  namespace: ecommerce
spec:
  ports:
  - port: 27017
  selector:
    app: mongodb-product-catalog
