microservices/product-catalog-VS.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-catalog
  namespace: ecommerce
spec:
  hosts:
  - product-catalog
  http:
  - route:
    - destination:
        host: product-catalog
        subset: v1
      weight: 50
    - destination:
        host: product-catalog
        subset: v2
      weight: 50
